test/spec_vectors/local_set/fail/module_18.wat
(module (func $type-param-arg-empty-vs-num-in-select (param i32) (select (local.set 0) (i32.const 1) (i32.const 2))))